--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "webpack-dev-server": "^4.1.1"
   },
   "dependencies": {
+    "@types/node-fetch": "^3.0.3",
+    "node-fetch": "^3.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0"
